force-app/main/default/objects/product_information__c/product_information__c.object-meta.xml
<CustomObject>
    <description>all the information of products</description>
    <label>product information</label>
    <nameField>
        <label>product information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>product informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>