force-app/main/default/objects/product_information__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>product informations</relationshipLabel>
    <relationshipName>product_informations</relationshipName>
    <type>Lookup</type>
</CustomField>