force-app/main/default/objects/product_information__c/fields/customer_information__c.field-meta.xml
<CustomField>
    <fullName>customer_information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>customer information</label>
    <referenceTo>customer_information__c</referenceTo>
    <relationshipLabel>product informations</relationshipLabel>
    <relationshipName>product_informations</relationshipName>
    <type>Lookup</type>
</CustomField>